--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/http-status-codes": "^1.2.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.10"
   }
 }
