--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.6",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.10"
   }
