--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.3",
     "@types/nodemailer": "^6.4.6",
+    "mysql": "^2.18.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
