--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,14 +98,7 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */,
-    "baseUrl": "src",
-    "paths":{
-      "@entities/*":["models/entities/*"],
-      "@models/*":["models/*"],
-      "@tasks/*":["tasks/*"],
-      "@mailer/*":["mailer/*"],
-      "@controllers/*":["controllers/*"]
-    }
+    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    
   }
 }
